Opened 15 years ago

Closed 15 years ago

#772 closed defect (fixed)

zzufed .txd file crashes ffmpeg_g(memory exceeded)

Reported by: Diana Muscalu Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: txd OOM
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

use zzuf -c -s733 -r0.001:1 ffmpeg_g -i misc.txd -f null - to produce the crash

Attachments (2)

misc.txd (23.4 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )
corruptfile (23.4 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

Download all attachments as: .zip

Change History (3)

by Diana Muscalu, 15 years ago

Attachment: misc.txd added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

by Diana Muscalu, 15 years ago

Attachment: corruptfile added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

comment:1 by Michael Niedermayer, 15 years ago

Keywords: txd OOM added
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.