txddemux: Limit allocated packets to filesize. Fixes Ticket772 Bug found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit f72601d06378494b5026b919fcd3eb5eb22799a1)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>